css/projects.scss
---
---

@import 'globals';

.project {
    float: left;
    width: 50%;
    box-sizing: border-box;
    padding: 1em;
    line-height: 1;
    cursor: default;

    @include media-query($on-palm) {
        width: 100%;
    }

    &:hover {
        .screenshot-wrapper {
            a {
                display: block;
            }

            .screenshot {
                opacity: 0.5;
            }
        }
    }

    h2 {
        margin-bottom: 0.1em;
    }

    .screenshot-wrapper {
        position: relative;

        a {
            position: absolute;
            display: none;
            width: 25%;
            top: 20%;
            padding: 5%;
            border-radius: 50%;
            background-color: rgba(255,255,255, 0.5);

            &:hover {
                background-color: rgba($brand-color-tertiary-blue, 0.8);
            }

            &.link {
                left: 15%;
            }

            &.github {
                right: 15%;
            }
        }

        .screenshot {
            background-color: white;
            border: 1px solid $grey-color-light;
        }
    }
}

